# TrailEditor

./: .gitignore  Cargo.toml  README.md  index.html  index.js  rustfmt.toml
optics/: Cargo.toml
optics/src/: lib.rs
src/: Main.purs  gpx.rs  lib.rs  main.rs  model.rs
src/styles/: index.scss
src/view/: mod.rs  top_bar.rs
trail_editor/: index.html
trail_editor/src/: gpx.rs  lib.rs  main.rs  model.rs
trail_editor/src/component/: mod.rs  top_bar.rs
trail_editor/src/styles/: index.scss
ui/: Cargo.toml  lib.rs
